<resources>
    <string name="app_name">Pasteleria</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Images</string>
    <string name="tab_text_3">Credit Card</string>
    <string name="tab_text_4">Upload</string>
    <string name="tab_text_5">Map</string>


    <string name="textViewOrder">Make Your Order here</string>
    <string name="textLastName"> Enter Last Name</string>
    <string name="textCakeDesign">Describe your cake design, if no design type N/A</string>
    <string name="submit_order">Submit Order</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="select_type_of_cake">Select Type of Cake</string>
    <string name="quantity">Quantity</string>
    <string name="size_of_cake">Size of Cake</string>
    <string name="will_there_be_a_design">Will there be a design?</string>
    <string name="will_this_cake_be_delivered">Will This Cake Be Delivered?</string>


    <string name="enter_name">Enter Name</string>
    <string name="entre_name_of_image">Enter name of image</string>
    <string name="image_to_look">Image to look</string>
    <string name="upload_your_image_here">Upload Image Here</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="submit">Submit</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="etEmail">E-mail address</string>
    <string name="etPassword">Password</string>
    <string name="log_out_button">Log out</string>
    <string name="all_the_images_that_will_be_added">all the images that will be added</string>


    <string-array name="cakeType">
        <item>Tres Leches/3 Milk Types</item>
        <item>De Fruta/Fruits</item>
        <item>Chocolate</item>
        <item>Chocolate y Tres Leches/Chocolate and 3 Milk Types</item>
    </string-array>

    <string-array name="numberofCakes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="cakeSize">
        <item>20 Personas/20 People</item>
        <item>60 Personas/60 People</item>
        <item>80 Personas/80 People</item>
        <item>100+ Personas/100+ People</item>
    </string-array>


    <string-array name="chooseDesign">
        <item>Yes, have a Design</item>
        <item>No Design</item>
    </string-array>

    <string-array name="cakeDelivery">
        <item>Yes,Deliver</item>
        <item>No, Dont Deliver</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>