<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FD9F66C6"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FD9F66C6"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/UploadView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/upload_your_image_here"
                android:textAlignment="center"
                android:textColor="#FDF5F5F6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/enter_name"
                    android:textColor="#FDF5F5F6" />

                <EditText
                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/entre_name_of_image"
                    android:inputType="textPersonName"
                    android:textColor="#FDF5F5F6" />
            </LinearLayout>

            <ImageView
                android:id="@+id/uploadView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:textColor="#FDF5F5F6"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:visibility="visible"
                android:contentDescription="@string/upload_your_image_here" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCamera"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FF6E16AC"
                    android:text="@string/camera"
                    android:textColor="#FDF5F5F6" />

                <Button
                    android:id="@+id/buttonGallery"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FF6E16AC"
                    android:text="@string/gallery"
                    android:textColor="#FDF5F5F6" />
            </LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#FF6E16AC"
                android:text="@string/submit"
                android:textColor="#FDF5F5F6" />

        </LinearLayout>

</androidx.core.widget.NestedScrollView>